--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,19 +3,14 @@ server:
 spring:
   cloud:
     config:
-      name: prototype-config-micro-one
-      profile: dev
+      name: micro-config-template
+      profile: dev, qa
 ---
 spring:
   cloud:
     config:
       server:
         git:
-          uri: https://github.com/AlfredoOramon/{application}-{profile}
-          repos:
-            microservice1:
-              pattern: '*/development,*/staging'
-              uri: https://github.com/AlfredoOramon/prototype-config-micro-one-dev
-
-            #microservice2:
-            #microservice3:
+          uri: https://github.com/javierOramon/{application}-{profile}
+          username:
+          password:
