--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,5 @@ spring:
           uri: https://github.com/javierOramon/{application}-{profile}
           username:
           password:
+---
+root_configs: configs
