update time service environments to include both dev and qa

--- a/configs/time-service-config/environments.yml
+++ b/configs/time-service-config/environments.yml
@@ -1,5 +1,5 @@
 
 environments:
-- uri: "/time-service-config/dev"
+- uri: "/time-service-config/*"
   roles_allowed:
   - time-service-config-DEVELOPER
