--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     config:
       server:
         git:
-          uri: ${git_account}/{application}-{profile}
+          uri: ${git_account}/{application}-${profile_spring_cloud}
           username:
           password:
 ---
